@@ -33,7 +33,6 @@ import java.io.StringWriter;
 import java.nio.file.Files;
 import java.nio.file.LinkOption;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -47,16 +46,19 @@ import static io.ballerina.projects.util.ProjectConstants.CONFIG_DIR;
  *
  * @since 0.8.0
  */
-public class LauncherUtils {
+public final class LauncherUtils {
+
+    private LauncherUtils() {
+    }
 
     public static Path getSourceRootPath(String sourceRoot) {
         // Get source root path.
         Path sourceRootPath;
         if (sourceRoot == null || sourceRoot.isEmpty()) {
-            sourceRootPath = Paths.get(System.getProperty("user.dir"));
+            sourceRootPath = Path.of(System.getProperty("user.dir"));
         } else {
             try {
-                sourceRootPath = Paths.get(sourceRoot).toRealPath(LinkOption.NOFOLLOW_LINKS);
+                sourceRootPath = Path.of(sourceRoot).toRealPath(LinkOption.NOFOLLOW_LINKS);
             } catch (IOException e) {
                 throw new RuntimeException("error reading from directory: " + sourceRoot + " reason: " +
                         e.getMessage(), e);
@@ -84,8 +86,8 @@ public class LauncherUtils {
 
     public static BLauncherException createLauncherException(String errorPrefix, Throwable cause) {
         String message;
-        if (cause instanceof BError) {
-            message = ((BError) cause).getPrintableStackTrace();
+        if (cause instanceof BError bError) {
+            message = bError.getPrintableStackTrace();
         } else {
             StringWriter sw = new StringWriter();
             cause.printStackTrace(new PrintWriter(sw));
