@@ -35,10 +35,10 @@ import io.ballerina.tools.diagnostics.DiagnosticSeverity;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static io.ballerina.projects.PackageVersion.BUILTIN_PACKAGE_VERSION;
 
@@ -133,11 +133,12 @@ public class BlendedManifest {
                     }
                 }
             } else {
+                Collection<String> moduleNames = existingDepOptional.isPresent() ?
+                        existingDepOptional.get().modules : Collections.emptyList();
                 depContainer.add(depInPkgManifest.org(), depInPkgManifest.name(), new Dependency(
                         depInPkgManifest.org(), depInPkgManifest.name(), depInPkgManifest.version(),
                         DependencyRelation.UNKNOWN, REPOSITORY_NOT_SPECIFIED,
-                        moduleNames(new DependencyManifest.Package(depInPkgManifest.name(), depInPkgManifest.org(),
-                                depInPkgManifest.version())), DependencyOrigin.USER_SPECIFIED));
+                        moduleNames, DependencyOrigin.USER_SPECIFIED));
                 continue;
             }
 
@@ -187,7 +188,7 @@ public class BlendedManifest {
         return dependency.modules()
                 .stream()
                 .map(DependencyManifest.Module::moduleName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static Collection<String> moduleNames(PackageManifest.Dependency dependency,
@@ -196,7 +197,7 @@ public class BlendedManifest {
                 dependency.org(), dependency.name(), dependency.version());
         return moduleDescriptors.stream()
                 .map(moduleDesc -> moduleDesc.name().toString())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<Dependency> lockedDependency(PackageOrg org, PackageName name) {
@@ -235,7 +236,7 @@ public class BlendedManifest {
     private Collection<Dependency> dependencies(DependencyOrigin origin) {
         return depContainer.getAll().stream()
                 .filter(dep -> dep.origin == origin)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public DiagnosticResult diagnosticResult() {
