@@ -42,7 +42,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.ballerinalang.repository.CompilerOutputEntry.Kind;
@@ -58,7 +57,7 @@ public class FileSystemProjectDirectory extends FileSystemProgramDirectory {
     private final Path sourceDirPath;
     private List<String> packageNames;
     protected boolean scanned = false;
-    private static PrintStream outStream = System.out;
+    private static final PrintStream OUT_STREAM = System.out;
 
     public FileSystemProjectDirectory(Path projectDirPath) {
         super(projectDirPath);
@@ -94,7 +93,7 @@ public class FileSystemProjectDirectory extends FileSystemProgramDirectory {
                         .filter(ProjectDirs::containsSourceFiles)
                         .map(ProjectDirs::getLastComp)
                         .map(Path::toString)
-                        .collect(Collectors.toList());
+                        .toList();
             }
         } catch (SecurityException | AccessDeniedException e) {
             throw new BLangCompilerException("permission denied: " + projectDirPath.toString());
@@ -133,7 +132,7 @@ public class FileSystemProjectDirectory extends FileSystemProgramDirectory {
     public Path saveCompiledProgram(InputStream source, String fileName) {
         Path targetFilePath = ensureAndGetTargetDirPath().resolve(fileName);
         try {
-            outStream.println("    ./target/" + fileName);
+            OUT_STREAM.println("    ./target/" + fileName);
             Files.copy(source, targetFilePath, StandardCopyOption.REPLACE_EXISTING);
             return targetFilePath;
         } catch (DirectoryNotEmptyException e) {
@@ -208,15 +207,9 @@ public class FileSystemProjectDirectory extends FileSystemProgramDirectory {
     }
 
     private String getTopLevelDirNameInPackage(Kind kind, FileSystem fs) {
-        switch (kind) {
-            case SRC:
-            case BIR:
-            case OBJ:
-                return kind.getValue();
-            case ROOT:
-                return fs.getSeparator();
-
-        }
-        return null;
+        return switch (kind) {
+            case SRC, BIR, OBJ -> kind.getValue();
+            case ROOT -> fs.getSeparator();
+        };
     }
 }
