@@ -90,13 +90,13 @@ import org.wso2.ballerinalang.compiler.util.Names;
 import org.wso2.ballerinalang.compiler.util.TypeTags;
 import org.wso2.ballerinalang.util.Flags;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Deque;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.Stack;
-import java.util.stream.Collectors;
 
 import static org.ballerinalang.model.symbols.SymbolOrigin.VIRTUAL;
 import static org.ballerinalang.util.diagnostic.DiagnosticErrorCode.INVALID_QUERY_CONSTRUCT_INFERRED_MAP;
@@ -159,8 +159,8 @@ public class QueryTypeChecker extends TypeChecker {
         HashSet<BType> prevCheckedErrorList = commonAnalyzerData.checkedErrorList;
         commonAnalyzerData.checkedErrorList = new HashSet<>();
 
-        Stack<BLangNode> prevQueryFinalClauses = commonAnalyzerData.queryFinalClauses;
-        commonAnalyzerData.queryFinalClauses = new Stack<>();
+        Deque<BLangNode> prevQueryFinalClauses = commonAnalyzerData.queryFinalClauses;
+        commonAnalyzerData.queryFinalClauses = new ArrayDeque<>();
 
         int prevLetCount = commonAnalyzerData.letCount;
         commonAnalyzerData.letCount = 0;
@@ -239,8 +239,8 @@ public class QueryTypeChecker extends TypeChecker {
         Types.CommonAnalyzerData commonAnalyzerData = data.commonAnalyzerData;
 
         //reset common analyzer data
-        Stack<BLangNode> prevQueryFinalClauses = commonAnalyzerData.queryFinalClauses;
-        commonAnalyzerData.queryFinalClauses = new Stack<>();
+        Deque<BLangNode> prevQueryFinalClauses = commonAnalyzerData.queryFinalClauses;
+        commonAnalyzerData.queryFinalClauses = new ArrayDeque<>();
 
         int prevLetCount = commonAnalyzerData.letCount;
         commonAnalyzerData.letCount = 0;
@@ -282,10 +282,10 @@ public class QueryTypeChecker extends TypeChecker {
         List<BType> safeResultTypes = types.getAllTypes(targetType, true).stream()
                 .filter(t -> !types.isAssignable(t, symTable.errorType))
                 .filter(t -> !types.isAssignable(t, symTable.nilType))
-                .collect(Collectors.toList());
+                .toList();
         // resultTypes will be empty if the targetType is `error?`
         if (safeResultTypes.isEmpty()) {
-            safeResultTypes.add(symTable.noType);
+            safeResultTypes = List.of(symTable.noType);
         }
         BType actualType = symTable.semanticError;
         List<BType> selectTypes = new ArrayList<>();
@@ -496,7 +496,7 @@ public class QueryTypeChecker extends TypeChecker {
             validateKeySpecifier(queryExpr.fieldNameIdentifierList, constraintType);
             markReadOnlyForConstraintType(constraintType);
             tableType.fieldNameList = queryExpr.fieldNameIdentifierList.stream()
-                    .map(identifier -> ((BLangIdentifier) identifier).value).collect(Collectors.toList());
+                    .map(identifier -> ((BLangIdentifier) identifier).value).toList();
         }
         if (Symbols.isFlagOn(resolvedType.flags, Flags.READONLY)) {
             return ImmutableTypeCloner.getImmutableIntersectionType(null, types,
@@ -642,7 +642,7 @@ public class QueryTypeChecker extends TypeChecker {
         return clauses.stream()
                 .filter(clause -> (clause.getKind() == NodeKind.FROM || clause.getKind() == NodeKind.JOIN))
                 .map(clause -> ((BLangInputClause) clause).collection.getBType())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BType getResolvedType(BType initType, BType expType, boolean isReadonly, SymbolEnv env) {
