@@ -46,7 +46,10 @@ import static org.ballerinalang.langserver.common.utils.CommonKeys.PKG_DELIMITER
  *
  * @since 2201.1.1
  */
-public class RecordUtil {
+public final class RecordUtil {
+
+    private RecordUtil() {
+    }
 
     /**
      * Get completion items list for struct fields.
@@ -198,7 +201,7 @@ public class RecordUtil {
     public static List<RecordFieldSymbol> getMandatoryRecordFields(RecordTypeSymbol recordType) {
         return recordType.fieldDescriptors().values().stream()
                 .filter(field -> !field.hasDefaultValue() && !field.isOptional())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -236,7 +239,7 @@ public class RecordUtil {
                     .map(tSymbol -> {
                         RecordTypeSymbol recordTypeSymbol = (RecordTypeSymbol) CommonUtil.getRawType(tSymbol);
                         return RawTypeSymbolWrapper.from(tSymbol, recordTypeSymbol);
-                    }).collect(Collectors.toList());
+                    }).toList();
         }
 
         return Collections.emptyList();
