@@ -45,7 +45,6 @@ import org.apache.commons.lang3.tuple.Pair;
 import org.ballerinalang.annotation.JavaSPIService;
 import org.ballerinalang.langserver.common.utils.SymbolUtil;
 import org.ballerinalang.langserver.commons.BallerinaCompletionContext;
-import org.ballerinalang.langserver.commons.completion.LSCompletionException;
 import org.ballerinalang.langserver.commons.completion.LSCompletionItem;
 import org.ballerinalang.langserver.completions.SymbolCompletionItem;
 import org.ballerinalang.langserver.completions.builder.ResourcePathCompletionItemBuilder;
@@ -59,7 +58,6 @@ import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 /**
@@ -77,7 +75,7 @@ public class ClientResourceAccessActionNodeContext
 
     @Override
     public List<LSCompletionItem> getCompletions(BallerinaCompletionContext context,
-                                                 ClientResourceAccessActionNode node) throws LSCompletionException {
+                                                 ClientResourceAccessActionNode node) {
 
         List<LSCompletionItem> completionItems = new ArrayList<>();
         if (onSuggestClients(node, context)) {
@@ -120,14 +118,13 @@ public class ClientResourceAccessActionNodeContext
                 completionItems.addAll(this.getNamedArgExpressionCompletionItems(context, node));
             }
         } else {
-            List<Symbol> clientActions = this.getClientActions(expressionType.get());
+            List<MethodSymbol> clientActions = this.getClientActions(expressionType.get());
             List<ResourceMethodSymbol> resourceMethodSymbols = clientActions.stream()
                     .filter(symbol -> symbol.kind() == SymbolKind.RESOURCE_METHOD)
-                    .map(symbol -> (ResourceMethodSymbol) symbol).collect(Collectors.toList());
+                    .map(symbol -> (ResourceMethodSymbol) symbol).toList();
             List<MethodSymbol> remoteMethods = clientActions.stream()
                     .filter(symbol -> symbol.kind() == SymbolKind.METHOD
-                            && ((MethodSymbol) symbol).qualifiers().contains(Qualifier.REMOTE))
-                    .map(symbol -> (MethodSymbol) symbol).collect(Collectors.toList());
+                            && symbol.qualifiers().contains(Qualifier.REMOTE)).toList();
 
             if (node.slashToken().isMissing()) {
                 completionItems.addAll(this.getCompletionItemList(remoteMethods, context));
