@@ -27,7 +27,7 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -36,10 +36,13 @@ import java.sql.Statement;
 /**
  * Util class for SQL DB Tests.
  */
-public class SQLDBUtils {
+public final class SQLDBUtils {
 
     public static final String DB_DIRECTORY = System.getProperty("libdir") + File.separator + "tempdb" + File.separator;
     private static final Logger LOG = LoggerFactory.getLogger(SQLDBUtils.class);
+
+    private SQLDBUtils() {
+    }
 
     /**
      * Delete all the files and sub directories which matches given prefix in a given directory.
@@ -61,7 +64,7 @@ public class SQLDBUtils {
         URL fileResource = BCompileUtil.class.getClassLoader().getResource(path);
         try {
             if (fileResource == null) {
-                fileResource = Paths.get(path).toUri().toURL();
+                fileResource = Path.of(path).toUri().toURL();
             }
             return FileUtils.readFileToString(new File(fileResource.toURI()), StandardCharsets.UTF_8);
         } catch (IOException | URISyntaxException e) {
@@ -121,7 +124,7 @@ public class SQLDBUtils {
      * This class represents a file based database used for testing data clients.
      */
     public static class FileBasedTestDatabase extends TestDatabase {
-        private String dbDirectory;
+        private final String dbDirectory;
 
         public FileBasedTestDatabase(DBType dbType, String databaseScript, String dbDirectory, String dbName) {
             this.dbDirectory = dbDirectory;
@@ -144,6 +147,7 @@ public class SQLDBUtils {
             initDatabase(jdbcUrl, username, password, databaseScript);
         }
 
+        @Override
         public void stop() {
             BFileUtil.deleteDirectory(new File(this.dbDirectory));
         }
